--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,3 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
 nav {
   background-color: #2a7694;
   padding: 15px;
@@ -11,7 +5,6 @@ nav {
 }
 
 nav ul {
-
   margin-left: auto;
   list-style-type: none;
   display: flex;
@@ -46,15 +39,12 @@ nav ul li a {
 .image {
   width: 50%;
   text-align: center;
-  /* Aligns the image to the right */
 }
 
-.image img {
-  max-width: 60%;
-  height: auto;
-  /* Ensures the image is responsive */
+.icons a {
+  margin: 0 10px;
+  display: inline-block;
 }
-
 
 .contact-container {
   margin: auto;
@@ -91,12 +81,37 @@ nav ul li a {
   font-size: 1rem;
   background-color: #333;
   color: white;
-  border: none;
   border-radius: 4px;
   cursor: pointer;
 }
 
-.icons a {
-  margin: 0 10px;
-  display: inline-block;
+.about-me {
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  color: #333;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+h2,
+h3 {
+  color: #0073b1;
+}
+
+ul {
+  list-style-type: square;
+  padding-left: 20px;
+}
+
+.columns {
+  display: flex;
+  gap: 20px;
+}
+
+.column {
+  flex: 1;
+}
+
+.contact-info {
+  margin-top: 20px;
 }
